# open-metadata-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml
.github/workflows/: release.yml
src/openmetadata_cli/: __init__.py  cli.py  client.py  config.py  formatting.py  token.py
tests/: __init__.py  test_cli.py  test_client.py  test_config.py  test_token.py
